# EmbySync

./: .gitignore  .gitmodules  CMakeLists.txt  EmbySync.qrc  InstallerInfo.cmake  InstallerInfo.txt  License.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  MediaData.cpp  MediaData.h  Project.cmake  QtProject.cmake  README.md  ReleaseNotes.txt  Settings.cpp  Settings.h  Settings.ui  SyncSystem.cpp  SyncSystem.h  UserData.cpp  UserData.h  VersionInfo.cmake  beach-settings.json  include.cmake  main.cpp  releases.json  settings.json
App/: CMakeLists.txt  main.cpp
Core/: CMakeLists.txt  CollectionModel.cpp  CollectionModel.h  CollectionsModel.cpp  CollectionsModel.h  IServerForColumn.h  MediaData.cpp  MediaData.h  MediaModel.cpp  MediaModel.h  MediaServerData.cpp  MediaServerData.h  MediaUserData.cpp  MediaUserData.h  MergeMedia.cpp  MergeMedia.h  MovieSearchFilterModel.cpp  MovieSearchFilterModel.h  MovieStub.cpp  MovieStub.h  ProgressSystem.cpp  ProgressSystem.h  ServerInfo.cpp  ServerInfo.h  ServerModel.cpp  ServerModel.h  Settings.cpp  Settings.h  SyncSystem.cpp  SyncSystem.h  Token.qrc  UserData.cpp  UserData.h  UserServerData.cpp  UserServerData.h  UsersModel.cpp  UsersModel.h  include.cmake  token.txt
Emby.EmbySync/: Emby.EmbySync.csproj  Emby.EmbySync.sln  Emby.ServerSync.csproj  Emby.ServerSync.sln  Plugin.cs
Emby.EmbySync/APIQueries/: APIQueries.cs
Emby.EmbySync/Configuration/: EmbySyncConfigurationPage.html  EmbySyncConfigurationPage.js  PluginConfiguration.cs  PluginNameSettings.html  PluginNameSettings.js  PluginTab2ConfigurationPage.html  PluginTab2ConfigurationPage.js  PluginTab3ConfigurationPage.html  PluginTab3ConfigurationPage.js  ServerSyncConfigurationPage.html  ServerSyncConfigurationPage.js
Emby.EmbySync/Models/: DatagramServerModel.cs
Emby.EmbySync/ScheduledTasks/: PluginScheduledTask.cs
Emby.EmbySync/ServerEntryPoint/: PluginEntryPoint.cs
Plugin/EmbySync/: EmbySync.csproj  EmbySync.sln  Plugin.cs
Plugin/EmbySync/APIQueries/: APIQueries.cs
Plugin/EmbySync/Configuration/: EmbySyncConfigurationPage.html  EmbySyncConfigurationPage.js  PluginConfiguration.cs
Plugin/EmbySync/Models/: DatagramServerModel.cs
Plugin/EmbySync/ScheduledTasks/: PluginScheduledTask.cs
Plugin/EmbySync/ServerEntryPoint/: PluginEntryPoint.cs
UI/: AddMovieForSearch.cpp  AddMovieForSearch.h  AddMovieForSearch.ui  CMakeLists.txt  CollectionsManager.cpp  CollectionsManager.h  CollectionsManager.ui  CreateCollections.cpp  CreateCollections.h  CreateCollections.ui  DataTree.cpp  DataTree.h  DataTree.ui  EditServerDlg.cpp  EditServerDlg.h  EditServerDlg.ui  EmbySync.qrc  MainWindow.cpp  MainWindow.h  MainWindow.ui  MediaData.cpp  MediaDataWidget.cpp  MediaDataWidget.h  MediaDataWidget.ui  MediaTree.cpp  MediaTree.h  MediaTree.ui  MediaUserDataWidget.cpp  MediaUserDataWidget.h  MediaUserDataWidget.ui  MediaWindow.cpp  MediaWindow.h  MediaWindow.ui  MissingEpisodes.cpp  MissingEpisodes.h  MissingEpisodes.ui  MissingMovies.cpp  MissingMovies.h  MissingMovies.ui  MissingTVDBid.cpp  (+25 more)
UI/CheckForLatestVersion/: CMakeLists.txt  CheckForLatestVersion.cpp  CheckForLatestVersion.h  DownloadLatestVersion.cpp  DownloadLatestVersion.h  include.cmake
UI/CheckForLatestVersion/tmp/: CheckForLatest.cpp  CheckForLatest.h
afi/: Steve Thompson Blu-Ray Collection.json  afi.json  collections.json  movies.json  moviesThatCouldntBeMadeToday.json  wb100.json
cli/: CMakeLists.txt  MainObj.cpp  MainObj.h  include.cmake  main.cpp  main.h
gui/: CMakeLists.txt  application.rc  include.cmake  main.cpp
lists/: Steve Thompson Blu-Ray Collection.xlsx  collections.json  kurosawa.json  movies.json  wb100.json
